Bug Fix: Added overflow scroll for solution container

--- a/css/default.css
+++ b/css/default.css
@@ -1003,6 +1003,7 @@ input {
 }
 .submitted-exercise-container{
 	padding: 10px;
+	overflow: scroll;
 }
 .submitted-exercise-container > .alignment {
 	width: 100%;
